--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -14,6 +14,14 @@
 
 .nav__link {
     margin-right: 3.2rem;
+
+    a {
+        text-decoration: none;
+        color: black;
+        &:hover {
+            text-decoration: underline;
+        }
+    }
 }
 
 .header__info {
@@ -46,4 +54,8 @@
 
 .header__loc {
     color: #c93e33;
+}
+
+.header__bottom {
+    background-color: white;
 }
