--- a/src/index.scss
+++ b/src/index.scss
@@ -17,7 +17,8 @@ body {
 }
 
 .container {
-    max-width: 1110px;
+    max-width: 1150px;
     margin: 0 auto;
     width: 100%;
+    padding: 0 2rem;
 }
