done category and price inputs

--- a/src/index.scss
+++ b/src/index.scss
@@ -22,3 +22,9 @@ body {
     width: 100%;
     padding: 0 2rem;
 }
+
+.content {
+    margin-top: 3rem;
+    background-color: white;
+    border: 1px solid #e6e6e6;
+}
