--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -78,6 +78,7 @@
 }
 
 .header__button {
+    font-family: inherit;
     padding: 1.2rem 3.3rem 1.2rem 2.1rem;
     font-size: 1.5rem;
     font-weight: 500;
