--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -14,6 +14,11 @@
     cursor: pointer;
     border-bottom: 1px solid #e6e6e6;
 
+    &--cart {
+        cursor: default;
+        height: 6rem;
+    }
+
     img {
         margin-right: 1.1rem;
     }
