--- a/src/components/CartForm/CartForm.scss
+++ b/src/components/CartForm/CartForm.scss
@@ -8,3 +8,96 @@
     line-height: 1.2;
     color: #b3b3b3;
 }
+
+.form__sum-wrapper {
+    margin-top: 4.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-size: 1.8rem;
+    font-weight: 500;
+}
+
+.form__sum {
+    color: #c93e33;
+}
+
+.cart__form-actions {
+    margin-top: 3.5rem;
+    display: flex;
+    flex-direction: column;
+}
+
+.cart__btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.5rem;
+    font-weight: 500;
+    font-family: inherit;
+    line-height: 1.2;
+    color: white;
+    border: none;
+    background-color: #c93e33;
+    border-radius: 4px;
+    padding: 1.3rem 3.2rem;
+
+    &--offer {
+        margin-top: 1rem;
+        background-color: white;
+        border: 1px solid #c93e33;
+        color: #c93e33;
+    }
+
+    transition: all 0.2s ease;
+
+    &:hover {
+        opacity: 0.7;
+    }
+
+    img {
+        margin-right: 2.6rem;
+    }
+}
+
+.offer__btn-wrapper {
+    display: flex;
+    text-align: left;
+    position: relative;
+    align-items: center;
+}
+
+.offer__btn-doc {
+    display: flex;
+    background-color: #c93e3310;
+    border-radius: 2px;
+    justify-content: center;
+    align-items: center;
+    width: 2.6rem;
+    height: 3rem;
+    margin-right: 2.6rem;
+    border-radius: 2px;
+
+    img {
+        margin-right: 0;
+        padding: 0.7rem;
+    }
+}
+
+.offer__btn-download {
+    position: absolute;
+    bottom: 0;
+    left: 1.5rem;
+    background: white;
+    border-radius: 50%;
+    height: 15px;
+    width: 15px;
+    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.05);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    img {
+        margin-right: 0;
+    }
+}
