--- a/src/components/CartProductItem/CartProductItem.scss
+++ b/src/components/CartProductItem/CartProductItem.scss
@@ -4,9 +4,7 @@
     align-items: center;
     flex-wrap: wrap;
     justify-content: space-between;
-    border: 1px solid #e6e6e6;
-    border-left: none;
-    border-top: none;
+    border-bottom: 1px solid #e6e6e6;
 }
 
 .cart__img-container {
