done validation in cart form

--- a/src/components/CartForm/CartForm.scss
+++ b/src/components/CartForm/CartForm.scss
@@ -114,6 +114,10 @@
         margin-top: 3rem;
     }
 
+    &--error {
+        border-bottom: 1px solid #c93e33;
+    }
+
     img {
         opacity: 1;
     }
