--- a/src/components/CartForm/CartForm.scss
+++ b/src/components/CartForm/CartForm.scss
@@ -42,6 +42,10 @@
     border-radius: 4px;
     padding: 1.3rem 3.2rem;
 
+    &--buy:disabled {
+        opacity: 0.7;
+    }
+
     &--offer {
         margin-top: 1rem;
         background-color: white;
